--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -10,6 +10,12 @@
 
 <body>
     <!-- TODO(Project 1): Implement routes. -->
+    <ul class="page-links">
+        {% for page_link in page_links %}
+        <li><a href="{{ page_link.url }}">{{ page_link.name }}</a></li>
+        {% endfor %}
+      </ul>
+    <h1>{{ greeting }}</h1>
     <div>       
         <!-- TODO(Checkpoint Requirement 3): Change the title and content of your wiki.-->
         This project is owned by Jabez, Donald and Ivan
