test not working

--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -18,7 +18,7 @@
     <h1>{{ greeting }}</h1>
     <div>       
         <!-- TODO(Checkpoint Requirement 3): Change the title and content of your wiki.-->
-        This project is owned by Jabez, Donald and Ivan
+        This project is owned by Jabez, Donald and Ivan.
     </div>
 </body>
 
