--- a/flaskr/templates/pages.html
+++ b/flaskr/templates/pages.html
@@ -7,7 +7,7 @@
   <h1>Welcome to My Wiki!</h1>
   <ul>
     {% for page in pages %}
-    <li><a href="{{ url_for(page) }}">{{ page }}</a></li>
+    <li><a href="{{ url_for("pages", pagename=page)}}">{{ page }}</a></li>
     {% endfor %}
   </ul>
 </body>
