Testing works. Yet to implement login, sign up and logout method.

--- a/flaskr/templates/about.html
+++ b/flaskr/templates/about.html
@@ -12,7 +12,7 @@
 
   <div class="author">
     <h4>Jabez Agyemang</h4>
-    <img src="{}" alt="Image Description".format(image1_link)>
+    <img src="{{image1_link}}" alt="Image Description">
 
     <p>Jabez is a computer science student at Howard University who loves watching anime during his free time.</p>
   </div>
