--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -15,6 +15,12 @@
         <li><a href="{{ page_link.url }}">{{ page_link.name }}</a></li>
         {% endfor %}
       </ul>
+
+      <form action="/search" method="GET">
+        <input type="text" name="q" placeholder="Search in wikis">
+        <button type="submit">Search</button>
+    </form>
+
     <h1>{{ greeting }}</h1>
     <div>       
         <!-- TODO(Checkpoint Requirement 3): Change the title and content of your wiki.-->
