--- a/flaskr/templates/search_results.html
+++ b/flaskr/templates/search_results.html
@@ -8,16 +8,11 @@
 <body>
     <h1>Search Results for "{{ query }}"</h1>
     {% if matches %}
-    <!-- <ul>
-        {% for match in matches %}
-        <li><a href="{{ match.url }}">{{ match.title }}</a></li>
-        {% endfor %}
-    </ul> -->
     <ul>
-        {% for page in matches %}
-        <li><a href="{{ url_for("pages", pagename=page)}}">{{ page }}</a></li>
+        {% for name, full_name in matches.items() %}
+        <li><a href="{{ url_for("pages", pagename=full_name)}}">{{ name }}</a></li>
         {% endfor %}
-      </ul>
+    </ul>
     {% else %}
     <p>No results found.</p>
     {% endif %}
