--- a/flaskr/templates/upload.html
+++ b/flaskr/templates/upload.html
@@ -8,9 +8,30 @@
             <p>{{ message }}</p>
         {% endif %}
         <form action="/upload" method="POST" enctype="multipart/form-data">
-            <input type="file" name="html_file" accept=".html">
+            <label for="file_name">File Name:</label>
+            <input type="text" name="file_name" id="file_name" required>
+            <br><br>
+            <label for="category">Category:</label>
+            <select name="category" id="category" required>
+                <option value="">Select Category</option>
+                <option value="business">Business</option>
+                <option value="technology">Technology</option>
+                <option value="gaming">gaming</option>
+            </select>
+            <br><br>
+            <label for="author">Author:</label>
+            <input type="text" name="author" id="author" required>
+            <br><br>
+            <input type="file" name="html_file" accept=".html" required>
             <br><br>
             <input type="submit" value="Upload">
         </form>
+        {% if success %}
+            <p>File upload was successful!</p>
+            <a href="/main.html">View Main Page</a>
+        {% elif error %}
+            <p>File upload was unsuccessful due to the following error:</p>
+            <p>{{ error }}</p>
+        {% endif %}
     </body>
 </html>
