--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Login Page</title>
+    <style>
+      input[type="text"], input[type="password"] {
+        width: 200px;
+      }
+    </style>
   </head>
   <body>
     <h1>Welcome to our website!</h1>
