--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -2,8 +2,106 @@
 <html>
 
 <head>
-    <!-- TODO(Checkpoint Requirement 3): Change the title and content of your wiki.-->
     <title>DIJ Project</title>
+    <style>
+        body {
+            background-color: #f2f2f2;
+            font-family: Arial, sans-serif;
+        }
+
+        h1 {
+            color: #0047ab;
+            font-size: 36px;
+            margin-top: 40px;
+        }
+
+        ul.page-links {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            background-color: #0047ab;
+            overflow: hidden;
+        }
+
+        ul.page-links li {
+            float: left;
+        }
+
+        ul.page-links li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        ul.page-links li a:hover {
+            background-color: #111;
+        }
+
+        form {
+            margin-top: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #fff;
+            padding: 20px;
+        }
+
+        input[type="text"],
+        select[name="category"],
+        input[name="author"] {
+            padding: 10px;
+            margin-right: 10px;
+            border-radius: 5px;
+            border: none;
+            box-shadow: 0 0 5px #ccc;
+        }
+
+        input[type="range"] {
+            width: 150px;
+            margin-right: 10px;
+        }
+
+        button[type="submit"] {
+            background-color: #0047ab;
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            box-shadow: 0 0 5px #ccc;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #002b5a;
+        }
+
+        div {
+            margin-top: 20px;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 5px #ccc;
+        }
+
+        p {
+            margin-top: 20px;
+        }
+
+        p.username {
+            font-weight: bold;
+        }
+
+        .user-info {
+      position: absolute;
+      top: 0;
+      right: 0;
+      padding: 10px;
+      background-color: #f2f2f2;
+      border-radius: 0 0 0 10px;
+    }
+    </style>
 </head>
 
 <body>
@@ -11,6 +109,7 @@
         {% for page_link in page_links %}
         <li><a href="{{ page_link.url }}">{{ page_link.name }}</a></li>
         {% endfor %}
+        <li><p class="username">Logged in as {{ username }}</p></li>
     </ul>
 
     <form action="/search" method="GET">
@@ -31,9 +130,11 @@
 
     <h1>{{ greeting }}</h1>
     <div>
-        <!-- TODO(Checkpoint Requirement 3): Change the title and content of your wiki.-->
         This project is owned by Jabez, Donald and Ivan.
     </div>
+    {% if message %}
+    <p>{{ message }}</p>
+    {% endif %}
 </body>
 
 </html>
