--- a/flaskr/templates/pages.html
+++ b/flaskr/templates/pages.html
@@ -2,6 +2,46 @@
 <html>
 <head>
   <title>My Wiki Index</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+    }
+
+    h1 {
+      text-align: center;
+      color: #0047ab;
+      margin-top: 40px;
+    }
+
+    ul {
+      list-style-type: none;
+      margin: 0 auto;
+      padding: 0;
+      max-width: 500px;
+    }
+
+    li {
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      background-color: #fff;
+      padding: 10px;
+      border-radius: 5px;
+    }
+
+    li:hover {
+      background-color: #f2f2f2;
+    }
+
+    a {
+      color: #0047ab;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <h1>Welcome to My Wiki!</h1>
