--- a/flaskr/templates/search_results.html
+++ b/flaskr/templates/search_results.html
@@ -1,21 +1,76 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Search Results</title>
+  <title>Search Results</title>
+  <style>
+    /* Global styles */
+    body {
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      line-height: 1.5;
+      margin: 0;
+      padding: 0;
+    }
+    a {
+      color: #0077c0;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    
+    /* Header styles */
+    .header {
+      background-color: #0077c0;
+      color: #fff;
+      padding: 20px;
+    }
+    .header h1 {
+      font-size: 32px;
+      margin: 0;
+    }
+    
+    /* Content styles */
+    .content {
+      margin: 20px;
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+    .content ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+    .content li {
+      margin-bottom: 10px;
+    }
+    .content p {
+      color: #777;
+      margin: 20px 0;
+    }
+  </style>
 </head>
-
 <body>
-    <h1>Search Results for "{{ query }}"</h1>
-    {% if matches %}
-    <ul>
-        {% for name, full_name in matches.items() %}
-        <li><a href="{{ url_for("pages", pagename=full_name)}}">{{ name }}</a></li>
-        {% endfor %}
-    </ul>
+  <div class="header">
+    {% if query == "" or query == " " %}
+      <h1>All Pages Result</h1>
     {% else %}
-    <p>No results found.</p>
+      <h1>Search Results for "{{ query }}"</h1>
     {% endif %}
-</body>
+  </div>
 
+  <div class="content">
+    {% if matches %}
+      <ul>
+        {% for name, full_name in matches.items() %}
+          <li><a href="{{ url_for('pages', pagename=full_name) }}">{{ name }}</a></li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <p>No results found.</p>
+    {% endif %}
+  </div>
+</body>
 </html>
+4
