fixed logic for login and signup where signup returns user as logged in

--- a/flaskr/templates/main.html
+++ b/flaskr/templates/main.html
@@ -109,7 +109,9 @@
         {% for page_link in page_links %}
         <li><a href="{{ page_link.url }}">{{ page_link.name }}</a></li>
         {% endfor %}
+        {% if username %}
         <li><p class="username">Logged in as {{ username }}</p></li>
+        {% endif %}
     </ul>
 
     <form action="/search" method="GET">
