fixed search logic

--- a/flaskr/templates/search_results.html
+++ b/flaskr/templates/search_results.html
@@ -61,7 +61,7 @@
   </div>
 
   <div class="content">
-    <h2>Search Results for "{{ query }}"</h2> <!-- Add this line -->
+    <h2>Search Results for "{{ query if query else "None" }}, author: {{ author if author else "None"}},  category: {{ category if category else "None" }}"></h2>
     {% if matches %}
       <ul>
         {% for name, full_name in matches.items() %}
@@ -72,5 +72,6 @@
       <p>No results found.</p>
     {% endif %}
   </div>
-</body>
-</html>
+  </body>
+  </html>
+  
