--- a/flaskr/templates/naruto_gaming_jabez.html.html.html
+++ b/flaskr/templates/naruto_gaming_jabez.html.html.html
@@ -57,22 +57,99 @@
         background-color: #0056b3;
     }
 </style>
+        
+        <style>
+    #comments-section {
+        font-family: Arial, sans-serif;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        background-color: #f8f8f8;
+    }
+
+    #comments-section h3,
+    #comments-section h4 {
+        margin-bottom: 10px;
+    }
+
+    #comments-section ul {
+        list-style-type: none;
+        padding: 0;
+    }
+
+    #comments-section li {
+        border-bottom: 1px solid #eee;
+        padding: 8px 0;
+    }
+
+    #comments-section li:last-child {
+        border-bottom: none;
+    }
+
+    #comments-section textarea {
+        width: 100%;
+        padding: 5px;
+        resize: none;
+        font-family: inherit;
+        font-size: 14px;
+        border: 1px solid #ccc;
+    }
+
+    #comments-section input[type="submit"] {
+        font-family: inherit;
+        font-size: 14px;
+        padding: 5px 10px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+    #comments-section input[type="submit"]:hover {
+        background-color: #0056b3;
+    }
+</style>
         </head>
   <body>
     <h1>Naruto Uzumaki</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Naruto_Uzumaki.svg/1200px-Naruto_Uzumaki.svg.png" alt="Naruto Uzumaki">
+    <img src="https://e1.pxfuel.com/desktop-wallpaper/9/795/desktop-wallpaper-naruto-iphone-naruto-thumbnail.jpg" alt="Naruto Uzumaki">
     <p>Naruto Uzumaki is a fictional character and the main protagonist of the Naruto manga and anime series. He was created by Masashi Kishimoto and first introduced in the manga series in 1999. Naruto is a ninja from the fictional village of Konohagakure and has a dream of becoming the Hokage, the leader of his village.</p>
     <p>Throughout the series, Naruto learns powerful ninja techniques and forms close bonds with his friends and allies. He also faces many challenges and enemies, including the evil organization Akatsuki and the powerful ninja Sasuke Uchiha.</p>
     <p>Despite his rough upbringing and difficult journey, Naruto remains optimistic and determined, never giving up on his dreams or his friends. He is known for his catchphrase "Believe it!" and his trademark bright orange outfit and spiky blonde hair.</p>
     <h2>Early Life</h2>
-    <img src="https://vignette.wikia.nocookie.net/naruto/images/1/18/Naruto_facial_markings.png/revision/latest/scale-to-width-down/350?cb=20170701154851" alt="Young Naruto Uzumaki">
     <p>Naruto was born on October 10th as the son of Minato Namikaze and Kushina Uzumaki. Shortly after his birth, the Nine-Tailed Fox attacked the village, and Naruto's parents sacrificed themselves to seal the beast inside their newborn son. This event made Naruto an outcast in his village, as many people feared and hated him for having the Nine-Tails inside of him.</p>
     <p>As a child, Naruto was energetic and mischievous, often getting into trouble and seeking attention. He had no family or friends to rely on, and often felt lonely and unimportant. However, he dreamed of becoming the Hokage so that he could gain recognition and respect from his fellow villagers.</p>
     <h2>Training and Friendship</h2>
-    <img src="https://vignette.wikia.nocookie.net/naruto/images/c/c8/Naruto_and_Iruka.PNG/revision/latest/scale-to-width-down/340?cb=20130707140403" alt="Naruto with his teacher, Iruka Umino">
+    <img src="https://qph.cf2.quoracdn.net/main-qimg-bf0b9d1670b99179b86014a78a5e184f-pjlq" alt="Naruto with his teacher, Iruka Umino">
     <p>Naruto's first friend and mentor was Iruka Umino, his academy teacher. Iruka saw potential in Naruto and encouraged him to work hard and never give up. Naruto looked up to Iruka as a father figure and was devastated when he thought Iruka had died during the invasion of Konoha by Orochimaru and his forces.</p>
     <p>After Iruka's supposed death, Naruto continued to train and make new friends, including Sasuke Uchiha and Sakura Haruno. Together, they formed Team 7 under the guidance of Kakashi Hatake. Naruto's relationship with Sasuke was complicated, as they often clashed due to their opposing personalities and goals. However, Naruto never gave up on Sasuke and continued
 
+                <div id="comments-section">
+                    <h3>Comments</h3>
+                    {% if comments %}
+                        <ul>
+                            {% for comment in comments %}
+                                <li><b>{{ comment.username }}:</b> {{ comment.comment }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% else %}
+                        <p>No comments yet.</p>
+                    {% endif %}
+
+                    {% if 'username' in session %}
+                        <h4>Add a comment</h4>
+                        <form method="POST">
+                            <textarea name="comment" rows="4" cols="50" required></textarea><br>
+                            <input type="submit" value="Submit">
+                        </form>
+                    {% else %}
+                        <p>You must <a href="{{ url_for('login') }}">log in</a> to post a comment.</p>
+                    {% endif %}
+                </div>
+            
                 <div id="comments-section">
                     <h3>Comments</h3>
                     {% if comments %}
